# gembed-sandbox

./: .gitignore  Cargo.toml  README.md
benchmark-embedders/: .gitignore  Cargo.toml
benchmark-embedders/src/: candle.rs  grpc_embed_client.rs  main.rs
benchmark-embedders/src/tei_benchmarks/: tei_grpc_batch.rs  tei_grpc_individual.rs  tei_http.rs
benchmark-pg_gembed-vs-tei/: Cargo.toml
benchmark-pg_gembed-vs-tei/src/: tei_http_embedder.rs
benchmark-tei/: Cargo.toml  README.md
benchmark-tei-vs-gembed/: Cargo.toml  README.md
benchmark-tei-vs-gembed/src/: main.rs  tei_grpc_embedder.rs
benchmark-tei/src/: main.rs  tei_grpc_batch.rs  tei_grpc_individual.rs  tei_http.rs
benchmark-text-embedders/: Cargo.toml  README.md
benchmark-text-embedders/src/: candle.rs  embed_anything.rs  grpc.rs  main.rs  rust_bert.rs
python-scripts/: .gitignore  README.md  benchmark_config.yaml  benchmark_utils.py  orchestrator.sh  pg_gembed_vs_chromadb.py  plot_utils.py  requirements.txt
python-scripts/1_internal-vs-external-gen/: README.md  benchmark.py
python-scripts/2_pg_gembed-vs-chromadb/: README.md  benchmark.py
python-scripts/2_pg_gembed-vs-vectordbs/: README.md  benchmark.py
python-scripts/3_mono-store-vs-poly-store/: README.md  benchmark.py  benchmark_scenario1.py  benchmark_scenario2.py
python-scripts/3_unified-vs-distributed/: README.md  benchmark.py
python-scripts/4_tpcx-ai-uc4/: README.md  benchmark.py  benchmark_ingestion.py  benchmark_serving.py
python-scripts/5_tpcx-ai-uc9/: README.md  benchmark.py  benchmark_scenario1_ingestion.py  (+5 more)
src/: main.rs
(+148 files in other folders)
