[package]
name = "benchmark-embedders"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tonic = "0.14.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic-prost = "0.14.2"
prost = "0.14.1"
fastembed = { git = "https://github.com/JoelDiaz222/fastembed-rs" }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
serde_json = "1.0.145"
tokenizers = "0.22.1"

[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"
