[package]
name = "benchmark-tei-vs-gembed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tonic = "0.14.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic-prost = "0.14.2"
prost = "0.14.1"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
postgres = "0.19.12"
sysinfo = "0.37.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"
